# onnxruntime

./: cgmanifest.json
cmake/: CMakeLists.txt  onnxruntime_unittests.cmake
include/onnxruntime/core/framework/: op_kernel_info.h
onnxruntime/core/framework/: allocator.cc  op_kernel_info.cc  sequential_executor.cc
onnxruntime/core/providers/ngraph/: ngraph_execution_provider.h
onnxruntime/python/tools/quantization/: README.md  calibrate.py  make_model.ipynb  modify_mobilenet.ipynb  modify_model_clean.ipynb  node_additions.py  quantize.py  quantize_calibrate.py  run_model.ipynb  run_model_clean.ipynb  transformer.py
onnxruntime/python/tools/quantization/.ipynb_checkpoints/: run_model_clean-checkpoint.ipynb
onnxruntime/python/tools/quantization/mobilenet.constant_initializers/: mobilenet.yaml
onnxruntime/test/perftest/: ort_test_session.cc
onnxruntime/test/providers/cpu/tensor/: squeeze_op_test.cc
samples/: CMakeLists.txt  CachedInterpolation.h  Callback.h  ImageLoader.cc  ImageLoader.h  fns_candy_style_transfer.c  jpeg_handle.cc  jpeg_handle.h  jpeg_mem.cc  jpeg_mem.h  local_filesystem.cc  local_filesystem.h  main.cc
tools/ci_build/: build.py
tools/ci_build/github/linux/docker/scripts/: install_deps.sh
